--- a/Owori/Owori/Info.plist
+++ b/Owori/Owori/Info.plist
@@ -5,7 +5,7 @@
 	<key>UINewsstandIcon</key>
 	<true/>
 	<key>UINewsstandApp</key>
-	<true/>
+	<false/>
 	<key>CFBundleIcons</key>
 	<dict>
 		<key>CFBundlePrimaryIcon</key>
@@ -18,17 +18,6 @@
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<false/>
-		</dict>
-		<key>UINewsstandIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string></string>
-			</array>
-			<key>UINewsstandBindingType</key>
-			<string>UINewsstandBindingTypeMagazine</string>
-			<key>UINewsstandBindingEdge</key>
-			<string>UINewsstandBindingEdgeLeft</string>
 		</dict>
 	</dict>
 	<key>CFBundleURLTypes</key>
