--- a/Owori/Owori/Info.plist
+++ b/Owori/Owori/Info.plist
@@ -2,22 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>UINewsstandIcon</key>
-	<true/>
-	<key>UINewsstandApp</key>
-	<false/>
 	<key>CFBundleIcons</key>
 	<dict>
 		<key>CFBundlePrimaryIcon</key>
 		<dict>
-			<key>CFBundleIconName</key>
-			<string></string>
 			<key>CFBundleIconFiles</key>
 			<array>
 				<string></string>
 			</array>
+			<key>CFBundleIconName</key>
+			<string></string>
 			<key>UIPrerenderedIcon</key>
 			<false/>
 		</dict>
@@ -32,7 +26,19 @@
 				<string>kakao6c28960f69d4c7f00043b02d890dd6e0</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.191948284640-23ofhf39or8r56035kmq24lfrd60jj2k</string>
+			</array>
+		</dict>
 	</array>
+	<key>GIDClientID</key>
+	<string>191948284640-23ofhf39or8r56035kmq24lfrd60jj2k.apps.googleusercontent.com</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>kakaokompassauth</string>
@@ -43,5 +49,9 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UINewsstandApp</key>
+	<false/>
+	<key>UINewsstandIcon</key>
+	<true/>
 </dict>
 </plist>
